--- a/nasdaq/stockmarket/templates/stockmarket/vote.html
+++ b/nasdaq/stockmarket/templates/stockmarket/vote.html
@@ -7,6 +7,16 @@
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
+
+<style>
+
+.table > tbody > tr > td {
+     vertical-align: middle;
+}
+
+</style>
+
+
 <div class="container-fluid">
 	<nav class="navbar navbar-default">
 	  <div class="container-fluid">
@@ -25,7 +35,7 @@
 	<div class="container">
 	  <center><h2>Stock Hotboard</h2></center>
 	  <div class="col-lg-8 col-lg-offset-2">            
-		  <table class="table table-striped">
+		  <table class="table table-striped table-hover">
 		    <thead>
 		      <tr>
 		      	<center><th></th></center>
@@ -39,12 +49,19 @@
 		      {% for stock in latest_stocks %}
 		      
 		      <tr>
-		      	<td>
-				    <form action="{% url 'stockmarket:buyandsell' stock.id %}" method="post">
-				    {% csrf_token %}
-				    	<input type="submit" class ="btn btn-info" name="Buy" id="stock.value" value="Buy" />
-				    }
-					</form>
+		      	<td style="padding-top:0px;padding-bottom:15px;">
+				    <div align="right">
+					    <form action="{% url 'stockmarket:buy' stock.id %}" method="post">
+					    {% csrf_token %}
+					    	<input type="submit" class="btn btn-success btn-sm pull-left" id="stock_value" value="Buy"/>
+					    
+						</form>
+						<form action="{% url 'stockmarket:sell' stock.id %}" method="post">
+					    {% csrf_token %}
+					    	<input type="submit" class ="btn btn-warning btn-sm" id="stock_value" value="Sell" style="float:right;"/>
+					    
+						</form>
+					</div>
 				</td>	
 		        <td>{{ stock.stock_code }}</a></td>
 		        <td><a href="/stockmarket/{{ stock.id }}/">{{ stock.stock_name }}</a></td>
