--- a/nasdaq/stockmarket/templates/stockmarket/vote.html
+++ b/nasdaq/stockmarket/templates/stockmarket/vote.html
@@ -21,10 +21,8 @@
 	<nav class="navbar navbar-default">
 	  <div class="container-fluid">
 	    <div class="navbar-header">
-	      <a class="navbar-brand" href="#"><h3 style="margin-top:0px;">FAKE NASDAQ Homepage</h3></a>
+	      <a class="navbar-brand" href="/stockmarket/"><h3 style="margin-top:0px;">FAKE NASDAQ Homepage</h3></a>
 	      <ul class="nav navbar-nav navbar-link">
-	      	<li><a href="/stockmarket/#/">Vote!</a></li>
-	      	<li><a href="/stockmarket/#/">Submit a Stock!</a></li>
       	  </ul>
   	  	</div>
   	  </div>	
