--- a/nasdaq/stockmarket/templates/stockmarket/index.html
+++ b/nasdaq/stockmarket/templates/stockmarket/index.html
@@ -19,8 +19,8 @@
 	<nav class="navbar navbar-default">
 	  <div class="col-md-8 col-sm-8 col-lg-8 offset-lg-2 offset-md-2 offset-sm-2">
 	    <div class="navbar-header">
-	      <a class="navbar-brand"><h3 style="margin-top:0px;">The Crew: LAWYERS-AF NASDAQ Homepage</h3></a>
-  			<button type="button" class="btn btn-primary navbar-right" data-toggle="modal" data-target="#myModal" style="margin-top:8px;">
+	      <a class="navbar-brand"><h3 style="margin-top:0px;">LAWYERS-AF NASDAQ Homepage</h3></a>
+  			<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal" style="margin-top:8px;">
 				Submit Stock
 			</button>
 
@@ -54,11 +54,27 @@
   	  	</div>
   	  </div>	
 	</nav>
+	<div class="row-fluid">
+		<div class="col-lg-2 col-md-2 col-sm-2"></div>
+		<div class="col-md-8 col-sm-8 col-lg-8 offset-lg-2 offset-md-2 offset-sm-2" style="background:ghostwhite;">
+			<marquee behavior="scroll" direction="left"> 
+			{% if stock_list %}
+				{% for stock in stock_list%}
+				| {{ stock.stock_code }} -- {{ stock.value }}
+				{% endfor %} |
+			{% else %}
 
+			<p> There are Currently No Stocks Available </p>
+
+			{% endif %}
+
+			</marquee>
+		</div>
+	</div>
 
 	{% if stock_list %}
 	<div class="container">
-	  <center><h2>Stock Hotboard</h2></center>
+	  <center><h2 style="padding-top:20px;">Stock Hotboard</h2></center>
 	  <div class="col-lg-8 col-lg-offset-2">            
 		  <table class="table table-striped table-hover">
 		    <thead>
