final snippets files

--- a/nasdaq/stockmarket/templates/stockmarket/index.html
+++ b/nasdaq/stockmarket/templates/stockmarket/index.html
@@ -103,7 +103,7 @@
 						</form>
 				</td>	
 		        <td>{{ stock.stock_code }}</a></td>
-		        <td><a href="/stockmarket/{{ stock.id }}/">{{ stock.stock_name }}</a></td>
+		        <td><a href="{{ stock.id }}/">{{ stock.stock_name }}</a></td>
 		        <td>{{ stock.value }}</td>
 		        <td>{{ stock.transactions}}
 		      </tr>
